--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ h1,h2{
 @keyframes hbd{
     0%{     color: #000;    }
     25%{    color: white; }
-    50%{    color: pink; }
+    50%{    color: #000; }
     75%{    color: white;  }
     100%{   color: #000;    }
 }
@@ -76,13 +76,13 @@ h1,h2{
   top: 0;
   bottom: 0;
   position: absolute;
-background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+background: radial-gradient( #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
 background-size: 2800% 2800%;
 
--webkit-animation: rainbow 1s ease infinite;
--z-animation: rainbow 1s ease infinite;
--o-animation: rainbow 1s ease infinite;
-  animation: rainbow 1s ease infinite;}
+-webkit-animation: rainbow 2s ease infinite;
+-z-animation: rainbow 2s ease infinite;
+-o-animation: rainbow 2s ease infinite;
+  animation: rainbow 2s ease infinite;}
 
 @-webkit-keyframes rainbow {
     0%{background-position:0% 82%}
